2006-01-23  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-gal.c (load_source): Return 
	OfflineUnavailable error code if the mode is offline and GAL is not 
	marked for offline usage. Fixes #327312.

2006-01-23  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-component.c (impl_setLineStatus): Using proper
	status variable, GNOME_Evolution_ShellState, and Setting the offline
	status based on that.
	See #327343.

2006-01-18  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.5.5.1
	* NEWS : Updated

2006-01-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #327305
	* calendar/e-cal-backend-exchange.c: 
	(load_cache): Check if the file is present, if not, just
	return	sucess. The file will be created while saving the 
	items into the cache.

2006-01-18  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange.c (open_calendar): Calling 
	exchange_account_connect(), if account for given URI is not 
	found. Fixes #327305. 

2006-01-18  Tor Lillqvist  <tml@novell.com>

	* evolution-exchange-zip.in: New file, used to build a zipfile
	Win32 binary distribution of evolution-exchange for developers and
	beta testers.

	* configure.in
	* Makefile.am: Expand and distribute it.
	
	* configure.in: Add evolution-plugin to the EXCHANGE_STORAGE
	dependency list as it uses functions from libeutil, which is in
	evolution-plugin's .pc file.
	
2006-01-18  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange.c (open_calendar): Trying to get the
	ExchangeAccount for the URI, and if the account is not found calling
	exchange_account_connect. Folder list does not get populated, when 
	account is obtained using NULL uri, and hence loading calendar fails.
	Fixes #327305.

2006-01-18  Sushma Rai  <rsushma@novell.com>

	* storage/GNOME_Evolution_Exchange_Storage.server.in.in: Using API 
	version for DataServer BookFactory and CalFactory. See #323115.

2006-01-16  Sushma Rai  <rsushma@novell.com>
