@@ -1,5 +1,15 @@
 2006-01-23  Sushma Rai  <rsushma@novell.com>
 
+	* addressbook/e-book-backend-exchange.c 
+	(e_book_backend_exchange_start_book_view): Return OfflineUnavailable
+	status in the offline mode if the book is not marked for offline.
+	Fixes #327303, #327318.
+	(e_book_backend_exchange_authenticate_user): In online mode, set the
+	set the mode on ExchangeAccount before connecting. Fixes the issue of
+	not able to access address book on switching to online mode.
+
+2006-01-23  Sushma Rai  <rsushma@novell.com>
+
 	* addressbook/e-book-backend-gal.c (load_source): Return 
 	OfflineUnavailable error code if the mode is offline and GAL is not 
 	marked for offline usage. Fixes #327312.
